--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@
         .botao {
             margin: auto;
         }
+        @media only screen and (max-width: 415px) {
+            .button-jogar {
+                width: 156px;
+                height: 77px;
+                border-radius: 10px;
+                font-size: 1.2rem;
+                background-color: #322717;
+                border: 4px solid #ffffff;
+                color: #ffffff;
+                /* border: none; */
+                position: absolute;
+                align-self: center;
+                top: 286px;
+                left: 99px;
+                cursor: pointer;
+                /* transition: all 0.4s; */
+                font-family: 'Poppins', sans-serif;
+                box-shadow: rgb(50 50 93 / 25%) 0px 13px 27px -5px, rgb(0 0 0 / 30%) 0px 8px 16px -8px;
+            }
+            body {
+                background-image: url(fundo-inicio.jpg);
+            }
+        }
     </style>
 </head>
 <body>
