--- a/jogo.html
+++ b/jogo.html
@@ -8,6 +8,10 @@
     <title>Trunfo</title>
 </head>
 <body>
+    <img src="cloud-8094.png" id="vetor">
+    <img src="cloud-8094.png" id="vetor2">
+    <img src="cloud-8094.png" id="vetor3">
+    <img src="cloud-8107.png" id="vetor4">
    
     <main>
         <audio src='X2Download.com - Medieval Music vol. 2 (1000-1450) (128 kbps).mp3' id="audio"></audio>
